@@ -1,6 +1,9 @@
 # ChangeLog for net-www/squirm
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/www-proxy/cvs-repo/gentoo-x86/www-proxy/squirm/Attic/ChangeLog,v 1.1 2004/08/15 19:07:10 stuart Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/www-proxy/cvs-repo/gentoo-x86/www-proxy/squirm/Attic/ChangeLog,v 1.2 2004/08/15 23:41:27 cyfred Exp $
+
+  16 Aug 2004; Andrew Bevitt <cyfred@gentoo.org>; squirm-1.23.ebuild:
+  Changing net-www/squid to www-proxy/squid in depends
 
 *squirm-1.23 (15 Aug 2004)
 
