@@ -1,6 +1,9 @@
 # ChangeLog for net-www/squidguard
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/www-proxy/cvs-repo/gentoo-x86/www-proxy/squidguard/Attic/ChangeLog,v 1.1 2004/08/15 19:04:44 stuart Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/www-proxy/cvs-repo/gentoo-x86/www-proxy/squidguard/Attic/ChangeLog,v 1.2 2004/08/15 23:40:11 cyfred Exp $
+
+  16 Aug 2004; Andrew Bevitt <cyfred@gentoo.org>; squidguard-1.2.0-r1.ebuild:
+  Changing net-www/squid to www-proxy/squid in depends
 
 *squidguard-1.2.0-r1 (15 Aug 2004)
 
